Add Date Time & Schedule

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,10 @@
     -->
     <title>React App</title>
   </head>
-  <body id="app" style="background-color: black">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="particles-js"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -41,7 +42,7 @@
     -->
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
-      particlesJS.load("app", "particlesjs-config.json");
+      particlesJS.load("particles-js", "particlesjs-config.json");
     </script>
   </body>
 </html>
