--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,21 @@
     -->
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
+      window.addEventListener("DOMContentLoaded", (event) => {
+        /* ---- particles.js config ---- */
+
+        particlesJS("particles-js", {
+          particles: {
+            number: {
+              value: 380,
+              density: {
+                enable: true,
+                value_area: 3600,
+              },
+            },
+          },
+        });
+      });
       particlesJS.load("particles-js", "particlesjs-config.json");
     </script>
   </body>
