Add Location, Fix Particles.js

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!-- <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
       window.addEventListener("DOMContentLoaded", (event) => {
         /* ---- particles.js config ---- */
@@ -57,7 +57,7 @@
           },
         });
       });
-      particlesJS.load("particles-js", "particlesjs-config.json");
-    </script>
+      
+    </script> -->
   </body>
 </html>
